lib/src/compiler/tests/testdata/errors/118.out
error[E125]: invalid base64 alphabet
 --> line:3:23
  |
3 |     $a = "foo" base64("ff")
  |                       ^^^^ invalid length - must be 64 bytes
  |